crates/toml/tests/snapshots/invalid/table/llbrace.stderr
TOML parse error at line 1, column 3
  |
1 | [ [table]]
  |   ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
